# Minecraft-2

./: README.md
minecraft2/: CMakeLists.txt
minecraft2/src/: main.cpp
minecraft2/src/core/: camera.cpp  camera.h  job_system.cpp  job_system.h  metrics.h  profiler.cpp  profiler.h  window.cpp  window.h
minecraft2/src/logzilla/: logzilla.c  logzilla.h
minecraft2/src/math/: noise.cpp  noise.h  noise_avx2.asm
minecraft2/src/math/asm/: noise_avx2.asm
minecraft2/src/render/: debug_ui.cpp  debug_ui.h  free_list_allocator.h  renderer.cpp  renderer.h  renderer_postprocess.cpp  shader_compiler.cpp  shader_compiler.h  texture_manager.cpp  texture_manager.h  vertex.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_context.cpp  vulkan_context.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_swapchain.cpp  vulkan_swapchain.h
minecraft2/src/render/raytracing/: vulkan_raytracer.cpp  vulkan_raytracer.h
minecraft2/src/render/skybox/: skybox_renderer.cpp  skybox_renderer.h
minecraft2/src/textures/ambient/: sun.asm
minecraft2/src/world/: block.h  block_registry.cpp  block_registry.h  chunk.cpp  chunk.h  chunk_manager.cpp  chunk_manager.h
minecraft2/src/world/asm/: chunk_generate_avx2.asm  chunk_mesh_avx2.asm
